--- a/index.html
+++ b/index.html
@@ -1,15 +1,70 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS
-      HOLAAA
-    </title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GLOVE - Tu Asistente de Horarios</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
+</head>
+<body class="bg-gray-100">
+
+  <!-- Header -->
+  <header class="bg-blue-900 text-white py-4 px-6 flex justify-between items-center">
+    <a href="index.html"><img src="./imgs/GLOVElogo.png" alt="logo GLOVE"></a>
+
+    <nav class="flex items-center gap-8">
+      <a href="/signin.html" class="hover:underline">Vista Sign In</a>
+      <a href="/signup.html" class="hover:underline">Vista Sign Up</a>
+      <a href="/horario.html" class="hover:underline">Horario</a>
+      <a href="/calendario.html" class="hover:underline">Calendario</a>
+      <a href="/perfil.html" class="hover:underline">Nombre usuario</a>
+      <div class="w-10 h-10 rounded-full bg-white flex items-center justify-center">
+        <span class="text-purple-700 font-bold text-lg">🖐️</span>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <section class="py-20 px-6 text-center">
+    <div class="max-w-4xl mx-auto">
+      <h1 class="text-blue-900 text-4xl md:text-6xl font-extrabold mb-4 leading-tight">
+        GLOVE
+      </h1>
+      <p class="text-blue-900 text-lg md:text-xl text-blue-100 mb-8">
+        Con GLOVE, diseña y ajusta tu horario universitario de forma rápida, visual e inteligente.
+      </p>
+      <a href="#" class="inline-block bg-blue-900 text-white font-bold py-4 px-8 rounded-full text-lg hover:scale-105 transition transform duration-300">
+        Empezar ahora
+      </a>
+    </div>
+  </section>
+
+  <!-- Beneficios -->
+  <section class="bg-blue-900 py-20 px-6">
+    <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 text-center">
+      <div>
+        <div class="text-4xl mb-4">🧠</div>
+        <h3 class="text-white text-xl font-semibold mb-2">Asistente inteligente</h3>
+        <p class="text-white text-sm">Nuestra API optimiza tu horario ideal en segundos.</p>
+      </div>
+      <div>
+        <div class="text-4xl mb-4">📅</div>
+        <h3 class="text-white text-xl font-semibold mb-2">Diseño visual</h3>
+        <p class="text-white text-sm">Arrastra y suelta bloques para crear tu semana perfecta.</p>
+      </div>
+      <div>
+        <div class="text-4xl mb-4">📥</div>
+        <h3 class="text-white text-xl font-semibold mb-2">Carga desde PDF</h3>
+        <p class="text-white text-sm">Sube tu archivo de matrícula y genera el horario al instante.</p>
+      </div>
+    </div>
+  </section>
+
+</body>
 </html>
