--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="font-inter bg-[#f0f4f8] text-gray-900">
 
   <!-- Header -->
-  <header class="bg-[#1e293b] text-white py-4 px-6 flex justify-between items-center">
+  <header class="bg-blue-800 text-white py-4 px-6 flex justify-between items-center">
     <a href="index.html">
       <img src="./imgs/GLOVElogo.png" alt="logo GLOVE">
     </a>
@@ -30,25 +30,25 @@
   </header>
 
   <!-- Hero -->
-  <section class="bg-gradient-to-br from-blue-900 to-blue-600 text-white">
+  <section class="bg-white text-blue-800">
     <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 items-center py-20 gap-8 px-6">
       <!-- Texto -->
       <div class="text-center lg:text-left space-y-4">
         <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">
           Planificá tu semestre <br> de forma visual e inteligente
         </h1>
-        <p class="text-lg text-blue-200">
+        <p class="text-lg text-gray-800">
           Optimiza tu horario, integra materias desde PDF y organiza tu semestre en minutos.
         </p>
-        <a href="/signup.html" class="inline-block bg-white text-blue-900 font-semibold py-3 px-8 rounded-full shadow-lg hover:scale-105 transition">
+        <a href="/signup.html" class="bg-blue-800 text-white flex items-center justify-center w-1/3 py-3 rounded-md font-bold">
           Comenzar gratis
         </a>
       </div>
       <!-- Imagen mockup -->
       <div class="flex justify-center">
         <div class="w-64 h-40 md:w-80 md:h-48 rounded-lg shadow-xl flex flex-col overflow-hidden">
-          <div class="flex-1 bg-gray-100 flex items-center justify-center font-bold text-2xl">
-            <h1 class="text-blue-900">IMG AQUI</h1>
+          <div class="flex-1 bg-blue-800 flex items-center justify-center font-bold text-2xl">
+            <h1 class="text-white">IMG AQUI</h1>
           </div>
         </div>
       </div>
@@ -56,7 +56,7 @@
   </section>
 
   <!-- Beneficios -->
-  <section class="bg-[#1e293b] text-white py-16 px-6">
+  <section class="bg-blue-800 text-white py-16 px-6">
     <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 text-center">
       <div class="space-y-3">
         <div class="text-5xl">🧠</div>
