--- a/horario.html
+++ b/horario.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Calendario - Proyecto</title>
+  <title>Horario</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-white font-sans">
   <header class="bg-blue-900 text-white py-4 px-6 flex justify-between items-center">
     <a href="index.html"><img src="./imgs/GLOVElogo.png" alt="logo GLOVE"></a>
 
@@ -70,19 +70,19 @@
     </div>
 
     <!-- Botón -->
-    <aside class="w-full max-w-md flex flex-col gap-3 pl-5">
+    <aside class="w-full max-w-md flex flex-col gap-3 pl-8">
   <!-- Botones en fila -->
   <div class="flex flex-row items-start justify-start gap-5 h-20">
     <!-- Botón Upload PDF -->
     <div class="flex-shrink-0">
-      <button aria-label="Subir PDF" class="flex flex-col items-center justify-center bg-[#1e3a8a] text-white px-3 py-2 rounded-xl w-[90px] h-[72px] hover:bg-[#2c489e] transition duration-200 ease-in-out shadow-sm">
+      <button aria-label="Subir PDF" class="flex flex-col items-center justify-center bg-blue-900 text-white px-3 py-2 rounded-xl w-[90px] h-[72px] hover:bg-blue-800">
         <span class="text-xl leading-none mb-1">📤</span>
         <span class="font-medium text-[11px] text-center leading-tight">Upload PDF</span>
       </button>
     </div>
 
     <!-- Contenedor List Courses y asd -->
-    <div class="flex justify-around items-center bg-[#3275d3] text-white px-4 py-2 rounded-xl w-full h-[72px] hover:bg-[#3e82e0] transition duration-200 ease-in-out shadow-sm">
+    <div class="flex justify-around items-center bg-blue-600 text-white px-4 py-2 rounded-xl w-full h-[72px] hover:bg-blue-500 shadow-sm">
       <!-- List Courses -->
       <div class="flex flex-col items-center px-2">
         <span class="text-xl leading-none mb-1">📋</span>
