--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GLOVE - Organización Universitaria Inteligente</title>
+  <title>GLOVE</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body class="font-inter bg-[#f0f4f8] text-gray-900">
+<body class="font-inter bg-white">
 
   <!-- Header -->
-  <header class="bg-blue-800 text-white py-4 px-6 flex justify-between items-center">
+  <header class="bg-blue-900 text-white py-4 px-6 flex justify-between items-center">
     <a href="index.html">
       <img src="./imgs/GLOVElogo.png" alt="logo GLOVE">
     </a>
@@ -30,33 +30,27 @@
   </header>
 
   <!-- Hero -->
-  <section class="bg-white text-blue-800">
-    <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 items-center py-20 gap-8 px-6">
-      <!-- Texto -->
-      <div class="text-center lg:text-left space-y-4">
-        <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">
-          Planificá tu semestre <br> de forma visual e inteligente
-        </h1>
-        <p class="text-lg text-gray-800">
-          Optimiza tu horario, integra materias desde PDF y organiza tu semestre en minutos.
-        </p>
-        <a href="/signup.html" class="bg-blue-800 text-white flex items-center justify-center w-1/3 py-3 rounded-md font-bold">
-          Comenzar gratis
-        </a>
-      </div>
-      <!-- Imagen mockup -->
-      <div class="flex justify-center">
-        <div class="w-64 h-40 md:w-80 md:h-48 rounded-lg shadow-xl flex flex-col overflow-hidden">
-          <div class="flex-1 bg-blue-800 flex items-center justify-center font-bold text-2xl">
-            <h1 class="text-white">IMG AQUI</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  <section class="bg-white text-blue-900">
+  <div class="container mx-auto flex flex-col items-center justify-center py-20 gap-6 px-6 text-center">
+    
+    <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">
+      Planificá tu semestre <br> de forma visual e inteligente
+    </h1>
+
+    <p class="text-lg text-gray-800 max-w-xl">
+      Optimiza tu horario, integra materias desde PDF y organiza tu semestre en minutos.
+    </p>
+
+    <a href="/signup.html" class="bg-blue-900 text-white px-8 py-3 rounded-md font-bold hover:bg-blue-800 w-fit mx-auto">
+      Comenzar gratis
+    </a>
+
+  </div>
+</section>
+
 
   <!-- Beneficios -->
-  <section class="bg-blue-800 text-white py-16 px-6">
+  <section class="bg-blue-900 text-white py-16 px-6">
     <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 text-center">
       <div class="space-y-3">
         <div class="text-5xl">🧠</div>
