--- a/perfil.html
+++ b/perfil.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Perfil - GLOV</title>
+  <title>Perfil</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="h-screen bg-white text-gray-800 flex items-center justify-center">
+<body class="h-screen bg-gray-100 text-gray-800 flex items-center justify-center">
 
   <!-- Contenedor principal centrado -->
   <div class="w-full max-w-6xl px-4 grid grid-cols-1 md:grid-cols-2 gap-8">
 
     <!-- Panel Izquierdo: Información del Usuario -->
-<div class="bg-blue-800 text-white rounded-3xl p-8 flex flex-col items-center justify-center h-full min-h-[400px]">
+<div class="bg-blue-900 text-white rounded-3xl p-8 flex flex-col items-center justify-center h-full min-h-[400px]">
   <div class="w-32 h-32 bg-white rounded-full flex items-center justify-center mb-4">
     <img src="ruta/avatar.png" alt="Avatar" class="w-28 h-28 object-cover rounded-full"/>
   </div>
@@ -30,12 +30,12 @@
       <!-- Notificaciones -->
       <div class="flex items-center justify-between mb-6">
         <div class="flex items-center gap-3">
-          <span class="text-blue-800 text-xl">🔔</span>
+          <span class="text-blue-900 text-xl">🔔</span>
           <span class="font-medium">Notificaciones</span>
         </div>
         <label class="inline-flex items-center cursor-pointer">
           <input type="checkbox" class="sr-only peer" checked>
-          <div class="w-11 h-6 bg-blue-200 peer-focus:outline-none rounded-full peer peer-checked:bg-blue-800 relative">
+          <div class="w-11 h-6 bg-blue-200 peer-focus:outline-none rounded-full peer peer-checked:bg-blue-900 relative">
             <div class="absolute left-1 top-1 bg-white w-4 h-4 rounded-full transition-all peer-checked:translate-x-5"></div>
           </div>
         </label>
@@ -45,28 +45,28 @@
       <div class="space-y-4">
         <div class="flex items-center justify-between cursor-pointer hover:bg-gray-100 p-3 rounded-md">
           <div class="flex items-center gap-3">
-            <span class="text-blue-800">🪪</span>
+            <span>🪪</span>
             <span>Expediente</span>
           </div>
           <span>›</span>
         </div>
         <div class="flex items-center justify-between cursor-pointer hover:bg-gray-100 p-3 rounded-md">
           <div class="flex items-center gap-3">
-            <span class="text-blue-800">ℹ️</span>
+            <span>ℹ️</span>
             <span>Información</span>
           </div>
           <span>›</span>
         </div>
         <div class="flex items-center justify-between cursor-pointer hover:bg-gray-100 p-3 rounded-md">
           <div class="flex items-center gap-3">
-            <span class="text-blue-800">👥</span>
+            <span>👥</span>
             <span>Sobre Nosotros</span>
           </div>
           <span>›</span>
         </div>
         <div class="flex items-center justify-between cursor-pointer hover:bg-gray-100 p-3 rounded-md">
           <div class="flex items-center gap-3">
-            <span class="text-blue-800">🛡️</span>
+            <span>🛡️</span>
             <span>Condiciones de uso y Políticas</span>
           </div>
           <span>›</span>
@@ -82,8 +82,8 @@
       <!-- Modo claro / oscuro -->
       <div class="mt-8 flex justify-end">
         <div class="flex items-center bg-blue-200 rounded-full w-24 p-1">
-          <button class="bg-blue-800 text-white w-1/2 rounded-full py-1">🌞</button>
-          <button class="text-blue-800 w-1/2 py-1">🌙</button>
+          <button class="bg-blue-900 text-white w-1/2 rounded-full py-1">🌞</button>
+          <button class="text-blue-900 w-1/2 py-1">🌙</button>
         </div>
       </div>
     </div>
