--- a/signin.html
+++ b/signin.html
@@ -31,24 +31,22 @@
 
       <button
         type="submit"
-        class="w-full bg-blue-800 text-white py-5 rounded-md hover:bg-blue-700 font-semibold"
-      >
-        Ingresar
-      </button>
+        class="w-full bg-blue-900 text-white py-5 rounded-md hover:bg-blue-800 font-semibold"
+      >Ingresar</button>
     </form>
 
     <!-- Separador -->
     <div class="flex items-center justify-between my-6">
-      <hr class="w-1/3 border-blue-800" />
-      <hr class="w-1/3 border-blue-800" />
+      <hr class="w-1/3 border-blue-900" />
+      <hr class="w-1/3 border-blue-900" />
     </div>
 
     <!-- Botones -->
     <div class="flex justify-between gap-4">
-      <button class="bg-blue-800 text-white flex items-center justify-center w-1/3 py-3 rounded-md ml-10">
+      <button class="bg-blue-900 text-white flex items-center justify-center w-1/3 py-3 rounded-md ml-10">
         <span class="text-xl mr-2">Google</span>
       </button>
-      <button class="bg-blue-800 text-white flex items-center justify-center w-1/3 py-3 rounded-md font-bold text-xl mr-10">
+      <button class="bg-blue-900 text-white flex items-center justify-center w-1/3 py-3 rounded-md font-bold text-xl mr-10">
         MV
       </button>
     </div>
@@ -58,7 +56,7 @@
   <div class="w-2/5 bg-blue-600 flex flex-col justify-center items-center text-white">
     <img src="imgs/GLOVElogo.png" alt="GLOV Logo" class="mb-10"/>
     <h2 class="text-2xl font-semibold mb-6">Crear cuenta</h2>
-    <a href="#" class="bg-white text-blue-600 px-40 py-3 rounded-md font-semibold hover:bg-gray-100">
+    <a href="/signup.html" class="bg-white text-blue-600 px-40 py-3 rounded-md font-semibold hover:bg-gray-100">
       Regístrate
     </a>
   </div>
