--- a/signin.html
+++ b/signin.html
@@ -56,7 +56,7 @@
   <div class="w-2/5 bg-blue-600 flex flex-col justify-center items-center text-white">
     <img src="imgs/GLOVElogo.png" alt="GLOV Logo" class="mb-10"/>
     <h2 class="text-2xl font-semibold mb-6">Crear cuenta</h2>
-    <a href="/signup.html" class="bg-white text-blue-600 px-40 py-3 rounded-md font-semibold hover:bg-gray-100">
+    <a href="/signup.html" class="bg-white text-blue-600 py-5 rounded-md px-40 rounded-md font-semibold hover:bg-gray-100">
       Regístrate
     </a>
   </div>
