--- a/landing.html
+++ b/landing.html
@@ -50,7 +50,7 @@
 
 
   <!-- Beneficios -->
-  <section class="bg-blue-900 text-white py-16 px-6 fixed left-0 bottom-0 w-full z-50">
+  <section class="bg-blue-900 text-white py-16 px-6">
     <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 text-center">
       <div class="space-y-3">
         <div class="text-5xl">🧠</div>
