--- a/landing.html
+++ b/landing.html
@@ -44,13 +44,33 @@
     <a href="/signup.html" class="bg-blue-900 text-white px-8 py-3 rounded-md font-bold hover:bg-blue-800 w-fit mx-auto">
       Comenzar gratis
     </a>
-
   </div>
 </section>
 
+<!-- Pasos simples -->
+  <section class="bg-blue-50 py-12">
+    <div class="container mx-auto max-w-3xl px-6">
+      <h2 class="text-2xl font-bold text-blue-900 text-center mb-8">¿Cómo empezar?</h2>
+      <div class="flex flex-col md:flex-row gap-6 justify-center">
+        <div class="flex-1 flex flex-col items-center text-center">
+          <div class="w-10 h-10 bg-blue-700 text-white rounded-full flex items-center justify-center mb-2 font-bold text-lg">1</div>
+          <p>Regístrate y crea tu perfil</p>
+        </div>
+        <div class="flex-1 flex flex-col items-center text-center">
+          <div class="w-10 h-10 bg-blue-700 text-white rounded-full flex items-center justify-center mb-2 font-bold text-lg">2</div>
+          <p>Agrega tus materias y horarios</p>
+        </div>
+        <div class="flex-1 flex flex-col items-center text-center">
+          <div class="w-10 h-10 bg-blue-700 text-white rounded-full flex items-center justify-center mb-2 font-bold text-lg">3</div>
+          <p>Consulta y organiza tu calendario <br>¡así de fácil!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Beneficios -->
-  <section class="bg-blue-900 text-white py-16 px-6">
+  <section class="bg-blue-900 text-white py-16 px-6 w-full z-50">
     <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 text-center">
       <div class="space-y-3">
         <div class="text-5xl">🧠</div>
